[package]
name = "voucherify_rs"
version = "0.1.1"
authors = ["Mateusz 'Haggus' Mrowiec <matt.mrowiec@gmail.com>"]
keywords = ["voucher", "voucherify", "api"]
description = "Rust SDK for Voucherify.io"
license = "MIT"
readme = "README.md"
repository = "https://github.com/voucherifyio/voucherify-rust-sdk.git"
homepage = "https://github.com/voucherifyio/voucherify-rust-sdk"

[dependencies]
hyper = "0.10.4"
hyper-native-tls = "0.2.2"
serde = "0.9"
serde_derive = "0.9"
serde_json = "0.9"
